fixed bootstrap grid layout issue

--- a/src/Swastika.IO.Core/ClientApp/app/areas/portal/portal.component.scss
+++ b/src/Swastika.IO.Core/ClientApp/app/areas/portal/portal.component.scss
@@ -1,3 +1,6 @@
 ﻿body {
     margin: 0;
 }
+.sw-content {
+    width: 100%;
+}
